= Packable --- History

== Version 1.16.0 - April 11th, 2010

* Added a features of 1.9.2:

  * Hash#keep_if, select!
  * Array#uniq, #uniq! (with block)

== Version 1.15.0 - March 23rd, 2010

* Added a features of 1.9.2:

  * Object#singleton_class

== Version 1.14.0 - March 3rd, 2010

* Added some features of 1.9.2:

  * Array#rotate, rotate!
  * Array#keep_if, select!
  * Array#sort_by!
  * Enumerable#join
  * Enumerable#slice_before
  * Float::INFINITY, NAN
  * MatchData#==

== Version 1.13.0 - January 20th, 2010

* Missing for 1.8.7 were
  * Array#permutation
  * Hash#hash  (was only inherited)
  * Hash#eql?  (was only inherited)

== Version 1.12.0 - December 4th, 2009

* Finer grain includes (see README)
  require "backports/1.9"    # requires all ruby backports
  require "backports/1.9.1"  # requires all ruby backports up to 1.9.1 (but not 1.9.2)

* Backported all builtin methods of 1.8.8 (most of which where moved from the 1.9 backports)

* Refreshed README

== Version 1.11.0 - November 4th, 2009

* Added Enumerable#flat_map / collect_concat (Ruby 1.9)

* Added Object#public_send (Ruby 1.9)

* Added Object#public_method (Ruby 1.9)

* bug fixes

== Version 1.10.0 - September 29th, 2009

* Added Enumerable#chunk (Ruby 1.9)

* Added Kernel#respond_to_missing? (Ruby 1.9)

* Completed Process.exec (Ruby 1.8.7)

== Version 1.9.0 - September 4th, 2009

* In Ruby 1.9, most class methods of File accept filenames as String, or convertible via #to_str or #to_path.
File#to_path is also an alias to File#path. These have been backported.

* File.binread (actually IO.binread)

* BasicObject available via "require 'backports/basic_object"

== Version 1.8.4 - September 3rd, 2009

Added Dir.mktmpdir for older version of 1.8.6

== Version 1.8.1 - September 1st, 2009

Added the alias String#lines (Ruby 1.8.7)

== Version 1.8 - August 30, 2009

Backports can be required selectively:
* backports/1.8.7
* backports/1.9 (which include 1.8.7)
* rails
