@@ -1,0 +1,1 @@
+autoload :Random, File.expand_path(File.dirname(__FILE__) + "/random/load")
